# astrospec

./: .travis.yml  LICENSE.rst  README.rst  setup.cfg
astrospec/: __init__.py  spectrum.py  spectrum1d.py  wcs.py
astrospec/io/: IUE.py  setup_package.py
astrospec/io/tests/: __init__.py  test_IUE_readers.py
astrospec/tests/: coveragerc
docs/: index.rst  install.rst  io.rst  rtd-pip-requirements  spectruminit.rst
