[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astrospec
description = Astropy affiliated spectroscopy package
long_description = This is a package contains a ``Spectrum`` class with useful methods for everyday tasks for astronomical spectroscopy analysis. The goal of this package is to provide a useful infrastructure. To that end, most of the methods of the object are fairly general, e.g. arithmatic on spectra, and thus should be applicable to spectra taken with many different instruments in many different wavelength regions.
author = Hans Moritz Guenther and Geoffrey Lentner
author_email = moritz.guenther@gmx.de
license = BSD
url = http://astrospec.readthedocs.org
edit_on_github = True
github_project = hamogu/astrospec

[entry_points]
#astropy-package-template-example = packagename.example_mod:main